[tool.poetry]
name = "codeql-bundle"
version = "0.1.0"
description = ""
authors = ["Remco Vermeulen <rvermeulen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "codeql_bundle"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
semantic-version = "^2.10.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
codeql-bundle = 'codeql_bundle.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
