[tool.poetry]
name = "codeql-bundle"
version = "0.4.0"
description = "Tool to create custom CodeQL bundles"
authors = ["Remco Vermeulen <rvermeulen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "codeql_bundle"}]
license = "MIT"
repository = "https://github.com/rvermeulen/codeql-bundle"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
semantic-version = "^2.10.0"
pyyaml = "^6.0"
jsonschema = "^4.22.0"

[tool.poetry.scripts]
codeql-bundle = 'codeql_bundle.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
